[package]
name = "secret-query-enclave"
version = "1.2.4"
authors = ["SCRT Labs <info@scrtlabs.com>"]
edition = "2018"
description = "An enclave running wasmi, to be used by cosmwasm-sgx-vm"

[lib]
name = "secret_query_enclave"
crate-type = ["staticlib"]

[features]
default = ["SGX_MODE_SW"]
SGX_MODE_SW = []
SGX_MODE_HW = []
production = ["SGX_MODE_HW", "enclave_utils/production", "log/max_level_warn", "log/release_max_level_warn"]
debug-print = ["enclave_contract_engine/debug-print"]

# This annotation is here to trick the IDE into showing us type information about this crate.
# We always compile to the "sgx" target, so this will always be false.
# when compiling to the "sgx" target, we pull this from the target root with an "extern crate" directive
[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { rev = "a37ffb9449ba6d5b6e4a9d586bbab864ae732269", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = [
    "backtrace"
] }
sgx_types = { rev = "a37ffb9449ba6d5b6e4a9d586bbab864ae732269", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[dependencies]
enclave_contract_engine = { path = "../shared/contract-engine", features = ["query-only"] }
enclave_utils = { path = "../shared/utils", features = ["query-only"] }

log = "0.4.8"
ctor = "0.1.13"

[dev-dependencies]
sgx_edl = { rev = "a37ffb9449ba6d5b6e4a9d586bbab864ae732269", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

lazy_static = "1.4"
