[package]
name = "enclave-ffi-types"
version = "0.1.0"
authors = ["Reuven Podmazo <reuven@enigma.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99"
secp256k1 = "0.17.2"

[build-dependencies]
cbindgen = "0.13"
thiserror = "1"
