[package]
name = "enclave-ffi-types"
version = "0.1.0"
authors = ["Reuven Podmazo <reuven@enigma.co>"]
edition = "2018"

[features]
default = []
build_headers = ["cbindgen", "thiserror"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
derive_more = "0.99"
# secp256k1 = { version = "0.17.2", default-features = false }

[build-dependencies]
cbindgen = { version = "0.13", optional = true}
thiserror = { version = "1", optional = true}
