[package]
name = "enigma-cosmwasm-sgx-vm"
version = "0.7.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>", "Enigma Team <dev@enigma.co>"]
edition = "2018"
description = "VM bindings to run cosmwams contracts inside an SGX enclave"
repository = "https://github.com/enigmampc/EnigmaBlockchain/tree/master/cosmwasm/lib/sgx-vm"
license = "Apache-2.0"

[dependencies]
cosmwasm = { path = "../..", version = "0.7.0" }
serde-json-wasm = "0.1.0"
#wasmer-runtime-core = "0.14.0"
#wasmer-middleware-common = "0.14.0"
#wasmer-clif-backend = {version = "0.14.0", optional = true }
#wasmer-singlepass-backend = {version = "0.14.0", optional = true }
schemars = "0.5"
serde = { version = "1.0.103", default-features = false, features = ["derive", "alloc"] }
snafu = { version = "0.5.0", default-features = false, features = ["rust_1_30"] }
sha2 = "0.8.0"
hex = "0.3.1"
memmap = "0.7"
lru = "0.3.1"
parity-wasm = "0.41"

[dev-dependencies]
tempfile = "3.1.0"
wabt = "0.9.1"
