[package]
name = "wasmi-runtime"
version = "0.1.0"
authors = ["Reuven Podmazo <reuven@enigma.co>"]
edition = "2018"
description = "An enclave running wasmi, to be used by cosmwasm-sgx-vm"

[lib]
name = "wasmi_runtime_enclave"
crate-type = ["staticlib"]

[dependencies]
derive_more = "0.99"
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.2" }
sgx_trts = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.2" }
sgx_tseal = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.2" }
enclave-ffi-types = { path = "../enclave-ffi-types" }
wasmi = { git = "https://github.com/paritytech/wasmi", rev = "39a18a433a765a36383d34d4edd536ba1e0664d2", default-features = false, features = [
    "core"
] }
bech32 = "0.7"
pwasm-utils = { version = "0.12.0", default-features = false }
parity-wasm = { version = "0.41.0", default-features = false }
log = "0.4.8"
#sgx_crypto_helper = { rev = "v1.1.1", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
#sgx_tcrypto   = { rev = "v1.1.1", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
ctor = "0.1.13"
secp256k1 = "0.17.2"
sha2 = "0.8.1"
ring = { git = "https://github.com/mesalock-linux/ring-sgx", rev = "v0.16.5" }

[dev-dependencies]
sgx_edl = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.2" }
