[package]
name = "enclave_contract_engine"
version = "1.6.0"
authors = ["Cashmaney <itzik@enigma.co>"]
edition = "2018"

[features]
default = ["wasm3"]
debug-print = []
test = []
wasm3 = []
wasmi-engine = ["wasmi", "parity-wasm", "pwasm-utils"]
light-client-validation = ["block-verifier"]
random = ["cw_types_generic/random", "cw_types_v1/random", "cw_types_v010/random"]

# This annotation is here to trick the IDE into showing us type information about this crate.
# We always compile to the "sgx" target, so this will always be false.
# when compiling to the "sgx" target, we pull this from the target root with an "extern crate" directive
[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { path = "../../../../third_party/incubator-teaclave-sgx-sdk/sgx_tstd", features = [
  "backtrace"
] }
sgx_types = { path = "../../../../third_party/incubator-teaclave-sgx-sdk/sgx_types" }

[dependencies]
enclave-ffi-types = { path = "../../ffi-types" }
cosmos_proto = { path = "../cosmos-proto" }
enclave_crypto = { path = "../crypto" }
enclave_cosmos_types = { path = "../cosmos-types" }
cw_types_v010 = { path = "../cosmwasm-types/v0.10" }
cw_types_v1 = { path = "../cosmwasm-types/v1.0" }
cw_types_generic = { path = "../cosmwasm-types/generic" }
enclave_utils = { path = "../utils" }
serde = { git = "https://github.com/mesalock-linux/serde-sgx", features = [
  "derive"
] }
serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx" }
base64 = { rev = "dc7389e10817b078f289386b3b6a852ab6c4c021", git = "https://github.com/mesalock-linux/rust-base64-sgx" }
protobuf = { version = "2.25.2" }
lazy_static = "1.4"
log = "0.4.14"
derive_more = "0.99"
sha2 = "0.8.1"
bech32 = "0.7.2"
pwasm-utils = { version = "0.12.0", default-features = false, optional = true }
parity-wasm = { version = "0.41.0", default-features = false, optional = true }
wasm3 = { git = "https://github.com/scrtlabs/wasm3-rs", rev = "ad1c868" }
walrus = { version = "0.19.0", git = "https://github.com/scrtlabs/walrus", rev = "c5777d4" }
lru = { version = "0.7", default-features = false }
hex = "0.4.2"
secp256k1 = { version = "0.24.2", features = ["recovery", "alloc"] }
ed25519-zebra = { version = "=2.2.0", default-features = false }
rand_core = "0.5.0"
rand_chacha = { version = "0.2.1", default-features = false }
bincode2 = { git = "https://github.com/scrtlabs/bincode2-sgx", rev = "bdf9f458eaf41778d64cb812ed8fcad64ffd72a9" }

block-verifier = {path = "../block-verifier", optional = true }

[dependencies.wasmi]
git = "https://github.com/paritytech/wasmi"
rev = "84d2764594d80425373bf4949a58fa3df3d624c3"
default-features = false
optional = true
features = ["core"]
