[package]
name = "enclave_crypto"
version = "1.6.0"
authors = ["SCRT Labs <info@scrtlabs.com>"]
edition = "2018"

[features]
production = []
test = []

# This annotation is here to trick the IDE into showing us type information about this crate.
# We always compile to the "sgx" target, so this will always be false.
# when compiling to the "sgx" target, we pull this from the target root with an "extern crate" directive
[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { path = "../../../../third_party/incubator-teaclave-sgx-sdk/sgx_tstd", features = [
  "backtrace"
] }
sgx_types = { path = "../../../../third_party/incubator-teaclave-sgx-sdk/sgx_types" }
sgx_trts = { path = "../../../../third_party/incubator-teaclave-sgx-sdk/sgx_trts" }

[dependencies]
enclave-ffi-types = { path = "../../ffi-types" }
log = "0.4.8"
derive_more = "0.99"
lazy_static = "1.4.0"
hex = "0.4.2"
ring = { git = "https://github.com/mesalock-linux/ring-sgx", tag = "v0.16.5" }
sha2 = "0.10.6"
sha3 = "0.10.6"
ripemd160 = "0.9.1"
secp256k1 = { version = "0.26.0", features = ["recovery", "alloc"] }
# k256
# aes-siv = { version = "0.7.0", default-features = false }
aes-siv = "0.6.2"
x25519-dalek = { version = "=1.2.0", default-features = false, features = [
  "u64_backend"
] }
cosmos_proto = { path = "../cosmos-proto" }
