[package]
name = "dcap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["SGX_MODE_SW"]
SGX_MODE_SW = []
SGX_MODE_HW = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { path = "../../../../third_party/incubator-teaclave-sgx-sdk/sgx_types" }
sgx_tse = { path = "../../../../third_party/incubator-teaclave-sgx-sdk/sgx_tse" }
sgx_tcrypto = { path = "../../../../third_party/incubator-teaclave-sgx-sdk/sgx_tcrypto" }

[dependencies]
attestation = { path = "../attestation" }
enclave_crypto = { path = "../crypto" }
enclave_utils = { path = "../utils" }
secret-attestation-token = { path = "../../../packages/secret-attestation-token", features = ["sgx"] }

log = "0.4.17"
## dcap-ql = { verion = "0.3.4", default-features = false, features = ["verify"] }
#base64           = { version = "0.13.0" }
#hex              = { version = "0.4.0" }
#serde            = { version = "1.0.92", features = ["derive"] }
#serde_json       = { version = "1.0.39" }
#rocket           = { git = "https://github.com/SergioBenitez/Rocket", rev = "dfc9e9aab01d349da32c52db393e35b7fffea63c", features = ["tls"] }
#libc             = { version = "0.2.66" }
#rand             = { version = "0.8.5" }
#ring             = { version = "0.16.11" }
#untrusted        = { version = "0.7.0" }
#uuid             = { version = "1.2.2", features = ["v4"] }
#chrono           = { version = "0.4.10" }
#lazy_static      = { version = "1.4.0" }
#percent-encoding = { version = "2.1.0" }
#pem              = { version = "0.7.0" }
