[package]
name = "read-verifier"
version = "0.1.0"
edition = "2018"

[features]
default = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { rev = "d2d339cbb005f676bb700059bd51dc689c025f6b", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = [
] }
sgx_types = { rev = "d2d339cbb005f676bb700059bd51dc689c025f6b", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[dependencies]
tendermint = { git = "https://github.com/scrtlabs/tendermint-rs", branch = "fix-val-set-parsing", default-features = false }
lazy_static = "1.4.0"
log = "0.4.17"
cosmos-sdk-proto = { version = "0.16.0", default-features = false }
ics23 = { version = "0.9.0", default-features = false, features = [
    "host-functions",
] }
prost = { version = "0.11", default-features = false, features = [
    "prost-derive",
] }
integer-encoding = "3.0.4"
enclave_utils = { path = "../utils" }
enclave_crypto = { path = "../crypto" }
